--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "yajra/laravel-datatables-oracle": "~6.0",
         "maatwebsite/excel": "~2.1.0",
-        "unisharp/laravel-ckeditor": "^4.7"
+        "unisharp/laravel-ckeditor": "^4.7",
+        "werneckbh/laravel-qr-code": "^0.1.3",
+        "yajra/laravel-datatables-oracle": "~6.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
